tests/fixtures/invalid/invalid_octal_integer_literal.c
int main(void) {
    return 08;
}
